--- a/CS/CS50/CH_6_자료구조/2_배열의_크기_조정하기.md
+++ b/CS/CS50/CH_6_자료구조/2_배열의_크기_조정하기.md
@@ -127,8 +127,8 @@ int main(void)
 ```
 char *c = "abcd";
 
-char자료형은 종단 문자로 문자의 끝 즉 메모리 끝은 확인 할 수 있는데   
+char자료형은 종단 문자로 문자의 끝 즉 메모리 끝을 확인 할 수 있는데   
 int *i = malloc(4 * sizeof(int));  
-이 코드는 어떻게 끝은 파악할까?  
+이 코드는 어떻게 끝을 파악할까?  
 c언어가 알아서 해주는 듯 하다?
 ```
