--- a/CS/CS50/CH_6_자료구조/3_연결리스트_도입.md
+++ b/CS/CS50/CH_6_자료구조/3_연결리스트_도입.md
@@ -66,3 +66,15 @@ node; // 구조체의 별명
 
 램은 임의의 영역에 접근하여 읽고 쓰기가 가능한 주기억 장치이다. 
 램은 어느 위치에 저장된 데이터든지 접근하는 데 동일한 시간이 걸리는 메모리이게 랜덤(무작위) 이라는 명칭이 주어진다.
+
+#### 더 생각해보기 
+배열은 랜덤 접근이 가능한데 연결리스트는 왜 안될까 ?
+```
+int num[3];
+배열은 num[2]를 접근 한다고 했을 때 
+num의 메모리 주소 + (자료형의 크기 * 인덱스)로 
+일정한 속도로 접근이 가능하다. 
+
+반면에 연결리스트는 num -> next -> number와 같이
+처음 부터 순회해서 접근해야한다. 
+```
