--- a/CS/CS50/CH_6_자료구조/3_연결리스트_도입.md
+++ b/CS/CS50/CH_6_자료구조/3_연결리스트_도입.md
@@ -3,9 +3,11 @@
 ## 생각해보기
 연결 리스트를 배열과 비교했을 때 장단점은 무엇이 있을까요?
 ```
-연결리스트는 요소를 추가할 때 포인터의 위치만 변경하면 되므로 배열보다 효율적이다. 
+연결리스트는 데이터가 계속해서 추가되는 상황에서 최소한의 메모리만 사용할 수 있다는 장점이 있다.  
 
-단점으로는 하나의 요소를 저장하는데 메모리 주소도 함께 저장하므로 메모리가 추가로 소모된다.
+반면에 배열은 필요한 메모리를 미리 확보하거나 복사 하는 과정이 필요하므로 비효율 적이다.  
+
+단점은 배열처럼 인덱스로 임의 접근이 불가능하고 순차 접근 해야한다.  
 ```
 
 노드
@@ -18,11 +20,21 @@
 
 배열은 요소가 메모리에 연속적으로 저장되어 있다. 
 
-메모리의 크기를 늘리려면 메모리를 동적으로 할당하고 복사하여  
+미리 확보한 메모리 크기를 초과한다면 
 
-O(n)의 시간복잡도를 가졌었다.  
+메모리를 동적으로 할당하고 복사하여야 한다.
+
+따라서 O(n)의 시간복잡도를 가진다.
 
 연결 리스트를 사용하면 이러한 단점을 상쇄시킬 수 있다.  
+
+비록 임의 접근이 불가능하다는 단점이 있지만 
+
+유동적으로 변하는 데이터를 관리하는데는 효율적이다.
+
+필요한 최소한의 메모리만 사용하다가 데이터가 늘어난다면 
+
+마지막 node에 다음 node를 '연결'만 해주면 되기 때문이다. 
 
 메모리상의 여러 군데 나뉘어져 있다고 하더라도 바로 다음 값의 메모리 주소만 기억하고 있다면 여전히 값을 연이어서 읽을 수 있다.  
 
