메모리 주소 설명에서 잘못된 내용 수정 (* -> *&)

--- a/CS/CS50/CH_5_메모리/1_메모리_주소.md
+++ b/CS/CS50/CH_5_메모리/1_메모리_주소.md
@@ -69,7 +69,7 @@ int main(void)
 }
 ```
 
-" * "를 사용하여 메모리 주소에 있는 실제 값 얻기
+" *& "를 사용하여 메모리 주소에 있는 실제 값 얻기
 n의 주소를 얻고, 다시 주소에 해당하는 값 얻는 코드
 ``` c
 #include <stdio.h>
